Mise a jour le 2 mai 2025

--- a/04-Sigles_Abrev.tex
+++ b/04-Sigles_Abrev.tex
@@ -26,25 +26,34 @@
   \acro{PRS}{ParkingRegulationSet ou ensemble de règlement}
   \acro{TD}{TaxDataset ou ensemble de données foncières}
   \acro{PI}{ParkingInventory ou inventaire de stationnement}
+  \acro{API}{Application Programming Interface ou interface de Programmation applicative}
+  \acro{HTTP}{HyperText Transfer Protocol}
+  \acro{REST}{Representational State Transfer}
+  \acro{URL}{Uniform Resource Locator}
+  \acro{URI}{Uniform Resource Identifier}
 \end{acronym}
 %
 \begin{longtable}{lp{5in}}
-SIG     & Système d'Information Géographique                                    \\
-GPS     & Global Positionning System                                            \\
-CNN		& Convolutionnal Neural Networks                                        \\
-OSM     & OpenStreetMap                                                         \\
-TC      & Transport en Commun                                                   \\
-PLUTO   & Primary Land Use Tax Lot Output                                       \\
-IoU     & Intersection over Union ou indice de Jaccard                          \\
-mIoU    & mean Intersection over Union ou indice de Jaccard moyen               \\
-ReLu    & Unité de rectification linéaire ou \og{Rectified Linear Unit} \fg{}   \\
-OQLF    & Office Québecois de la Langue Française                               \\
-CDS     & Coefficient de Dice Sorensen                                          \\
-CUBF    & Code d'Utilisation des Biens-Fonds                                    \\
-RST     & RegulationSetTerritory ou Ensembles de Règlements de Territoire       \\
-PR      & ParkingRegulation ou Règlement de stationnment                        \\
-PRS     & ParkingRegulationSet ou Ensemble de Règlements de Stationnement       \\
-TD      & TaxDataset ou Ensemble de données foncières                           \\
-
+SIG     & Système d'Information Géographique                                            \\
+GPS     & Global Positionning System                                                    \\
+CNN		& Convolutionnal Neural Networks                                                \\
+OSM     & OpenStreetMap                                                                 \\
+TC      & Transport en Commun                                                           \\
+PLUTO   & Primary Land Use Tax Lot Output                                               \\
+IoU     & Intersection over Union ou indice de Jaccard                                  \\
+mIoU    & mean Intersection over Union ou indice de Jaccard moyen                       \\
+ReLu    & Unité de rectification linéaire ou \og{Rectified Linear Unit} \fg{}           \\
+OQLF    & Office Québécois de la Langue Française                                       \\
+CDS     & Coefficient de Dice Sorensen                                                  \\
+CUBF    & Code d'Utilisation des Biens-Fonds                                            \\
+RST     & RegulationSetTerritory ou Ensembles de Règlements de Territoire               \\
+PR      & ParkingRegulation ou Règlement de Stationnement                                \\
+PRS     & ParkingRegulationSet ou Ensemble de Règlements de Stationnement               \\
+TD      & TaxDataset ou Ensemble de données foncières                                   \\
+API     & Application Programming Interface ou interface de Programmation applicative   \\
+HTTP    & HyperText Transfer Protocol                                                   \\
+REST    & REpresentational State Transfer                                               \\
+URL     & Uniform Resource Locator                                                      \\
+URI     & Uniform Resource Identifier                                                   \\
 \end{longtable}
 
