--- a/05-Introduction.tex
+++ b/05-Introduction.tex
@@ -121,7 +121,7 @@ Cette thèse aura pour but de développer un système d'information capable de g
 \item Développer une méthode d'inventaire du stationnement hors-rue basée sur la réglementation du point 1 et les données de rôle foncier.
 \item Créer un outil automatisé d'analyse d'image satellite pour recenser le stationnement hors-rue basé sur des méthodes d'apprentissage machine.
 \item Définir une structure de base de données qui permet d'inventorier le stationnement et de représenter visuellement la capacité de stationnement sur le territoire
-\item Valider les différentes méthodes d'estimations contre une réalité terrain pour valider la significativité statistique des estimés sur une variété de contexte géographiques et d'utilisation du sol
+\item Valider les différentes méthodes d'estimations contre une réalité terrain pour assurer la significativité statistique des estimés sur une variété de contexte géographiques et d'utilisation du sol
 \item Développer un interface facile d'utilisation qui permet à un praticien d'évaluer la capacité et de corriger les estimés au besoin
 \item Développer la structure d'un interface de programmation d'application pour que d'autres logiciels puissent valoriser la donnée dans les études de la mobilité
 \end{enumerate}
