--- a/07-8-Methode-analyse.tex
+++ b/07-8-Methode-analyse.tex
@@ -1,4 +1,23 @@
-\section{Méthode d'analyse} \label{sec:meth_analyse}
-  \subsection{Analyse spatio temporelle de l'offre de stationnement}
-  \subsection{Analyse spatio temporelle de la demande de stationnement}
-  \subsection{Analyse d'utilisation de la ressource}
+\section{Méthodologie d'analyse} \label{sec:meth_analyse}
+    La majorité de l'analyse se basera sur le calcul d'indicateurs. Les indicateurs permettent de synthétiser de l'information complexe sous forme digestible pour le praticien. Cette section détaillera les indicateurs implémentés dans l'outil. Certains sont tirés de la littérature tandis que d'autres ont été mis en place pour essayer de comprendre les relations entre le stationnement, l'utilisation du territoire, la fiscalité municipale et les comportements de mobilité.
+
+    \subsection{Indicateurs pour les lots}
+    \subsubsection{Indicateurs de stationnement}
+    \parapgraph{Nombre de places par hectare}
+    \subsubsection{Indicateurs d'utilisation du sol}
+
+    \subsection{Indicateurs de secteurs municipaux}
+    \subsubsection{Indicateurs de validité de l'estimé}
+    
+    \subsubsection{Indicateurs de stationnement}
+    \paragraph{Stationnement total}
+    Le stationnement total est la somme des places de stationnement des lots cadastraux à l'intérieur d'un secteur municipal. Si plusieurs estimés existent pour un même lot, l'un des estimés doit être choisi. Ce choix est opéré en sélectionnant la préférence pour la sélection  
+    \paragraph{Nombre de places par hectare}
+
+    \subsubsection{Indicateurs d'utilisation du sol}
+    
+    \subsubsection{Indicateurs de mobilité et de population}
+    
+    \subsubsection{Indicateurs de fiscalité municipale}
+    
+    \subsubsection{Indicateurs combinés et ratio}
