--- a/08-1-Resultats.tex
+++ b/08-1-Resultats.tex
@@ -1,2 +1,2 @@
 \Chapter{RÉSULTATS}\label{sec:Resultats}
-Texte / Text.
+Cette section sera divisée en plusieurs sous-sections adressant les différents objectifs de recherche du mémoire. La section \ref{ssec:outil_develope} montre l'interface de l'outil développé, la procédure de travail pour créer un inventaire en utilisant l'outil et les fonctionnalités implémentées. La section \ref{sec:analyse_stationnement} détaille les résultats de l'inventaire  qui a été dressé en utilisant l'outil pour le contexte de la ville de Québec. 
