--- a/Maitrise_Recherche.bib
+++ b/Maitrise_Recherche.bib
@@ -1,4 +1,61 @@
 
+@misc{bishop_rfc9114_2022,
+	title = {{RFC9114}},
+	url = {https://httpwg.org/specs/rfc9114.html},
+	abstract = {The QUIC transport protocol has several features that are desirable in a transport for HTTP, such as stream multiplexing, per-stream flow control, and low-latency connection establishment. This document describes a mapping of HTTP semantics over QUIC. This document also identifies HTTP/2 features that are subsumed by QUIC and describes how HTTP/2 extensions can be ported to HTTP/3.},
+	language = {en},
+	urldate = {2025-03-03},
+	journal = {IETF HTTP Working Group Specifications},
+	author = {Bishop, M.},
+	month = jun,
+	year = {2022},
+}
+
+@phdthesis{fielding_architectural_2000,
+	type = {phd},
+	title = {Architectural styles and the design of network-based software architectures},
+	abstract = {The World Wide Web has succeeded in large part because its software architecture has been designed to meet the needs of an Internet-scale distributed hypermedia system. The Web has been iteratively developed over the past ten years through a series of modifications to the standards that define its architecture. In order to identify those aspects of the Web that needed improvement and avoid undesirable modifications, a model for the modern Web architecture was needed to guide its design, definition, and deployment. Software architecture research investigates methods for determining how best to partition a system, how components identify and communicate with each other, how information is communicated, how elements of a system can evolve independently, and how all of the above can be described using formal and informal notations. My work is motivated by the desire to understand and evaluate the architectural design of network-based application software through principled use of architectural constraints, thereby obtaining the functional, performance, and social properties desired of an architecture. An architectural style is a named, coordinated set of architectural constraints. This dissertation defines a framework for understanding software architecture via architectural styles and demonstrates how styles can be used to guide the architectural design of network-based application software. A survey of architectural styles for network-based applications is used to classify styles according to the architectural properties they induce on an architecture for distributed hypermedia. I then introduce the Representational State Transfer (REST) architectural style and describe how REST has been used to guide the design and development of the architecture for the modern Web. REST emphasizes scalability of component interactions, generality of interfaces, independent deployment of components, and intermediary components to reduce interaction latency, enforce security, and encapsulate legacy systems. I describe the software engineering principles guiding REST and the interaction constraints chosen to retain those principles, contrasting them to the constraints of other architectural styles. Finally, I describe the lessons learned from applying REST to the design of the Hypertext Transfer Protocol and Uniform Resource Identifier standards, and from their subsequent deployment in Web client and server software.},
+	school = {University of California, Irvine},
+	author = {Fielding, Roy Thomas},
+	year = {2000},
+	note = {AAI9980887
+ISBN-10: 0599871180},
+	keywords = {Machine learning background},
+}
+
+@misc{gupta_http_2018,
+	title = {{HTTP} {Methods}},
+	url = {https://restfulapi.net/http-methods/},
+	abstract = {REST guidelines suggest using a specific HTTP method on a particular type of call made to the server i.e. GET, POST, PUT or DELETE.},
+	language = {en-US},
+	urldate = {2025-03-03},
+	journal = {REST API Tutorial},
+	author = {Gupta, Lokesh},
+	month = may,
+	year = {2018},
+}
+
+@book{chernenko_full_2024,
+	address = {Birmingham, UNITED KINGDOM},
+	title = {Full {Stack} {Web} {Development}: {Mastering} {Web} {Development} from {Client} to {Server}-{Side} {Technologies}},
+	isbn = {978-1-83664-492-7},
+	shorttitle = {Full {Stack} {Web} {Development}},
+	url = {http://ebookcentral.proquest.com/lib/polymtl-ebooks/detail.action?docID=31682744},
+	urldate = {2025-03-03},
+	publisher = {Packt Publishing, Limited},
+	author = {Chernenko, Mykyta},
+	year = {2024},
+	keywords = {HTML (Document markup language), JavaScript (Computer program language), Machine learning background, Web applications-Development.},
+}
+
+@misc{geopandas_developers_geopandasclip_nodate,
+	title = {geopandas.clip — {GeoPandas} 1.0.1+0.g747d66e.dirty documentation},
+	url = {https://geopandas.org/en/stable/docs/reference/api/geopandas.clip.html},
+	urldate = {2025-02-15},
+	author = {{Geopandas developers}},
+	keywords = {Machine learning background},
+}
+
 @book{lawhead_learning_2023,
 	address = {Birmingham, UNITED KINGDOM},
 	title = {Learning {Geospatial} {Analysis} with {Python}: {Unleash} the {Power} of {Python} 3 with {Practical} {Techniques} for {Learning} {GIS} and {Remote} {Sensing}},
